Fix a few layout issues

--- a/src/components/projectSidebar/projectSidebar.css
+++ b/src/components/projectSidebar/projectSidebar.css
@@ -16,7 +16,7 @@
 
 .projectSidebarHeading {
 
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
 
     color: var(--text-color);
 
